split menu on different classes